# MLIR-Recursion

./: .gitmodules  CMakeLists.txt  README.md  build_and_run.sh
benchmark/ReverseArray/: man_ra.cpp  reversearray.cpp
benchmark/ackerman/: ackerman.cpp  ackerman.mlir  man_ackerman.cpp  man_ackerman.ll  man_ackerman.mlir  mark_ack.mlir
benchmark/decimalToBase/: decimalToBase.cpp  man_dtb.cpp  mark_dec.mlir
benchmark/factorial/: fact.cpp  man_fact.cpp
benchmark/fib/: fib.cpp  fib.mlir  man_fib.cpp  man_fib.mlir
benchmark/gcd/: gcd.cpp  man_gcd.cpp  mark_gcd.mlir
benchmark/heapsum/: man_sum.cpp  man_sum.ll  man_sum.mlir  mark_sum.mlir  sum.cpp  sum.mlir
benchmark/sort/: man_sort.cpp  man_sort.ll  man_sort.mlir  mark_sort.mlir  sort.cpp
benchmark/tied_mmm/: mark_timm.mlir  tiled_mmm.cpp
hls-opt/: CMakeLists.txt  hls-opt.cpp
include/hls/: CMakeLists.txt  InitAllDialects.h  InitAllPasses.h
include/hls/Transforms/: CMakeLists.txt  Passes.h  Passes.td
lib/: CMakeLists.txt
lib/Transforms/: CMakeLists.txt  MarkRecursive.cpp  Recursion.cpp
recursion/: README.md
